--- a/src/style.css
+++ b/src/style.css
@@ -23,12 +23,11 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body,html{
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding:0;
+  width:100%;
+  height:100%;
 }
 
 h1 {
@@ -36,34 +35,12 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 10px;
   text-align: center;
+  width:100%;
+  height:100%;
 }
 
 @media (prefers-color-scheme: light) {
@@ -78,3 +55,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    color: #f9f9f9;
+    background-color:#213547 ;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+} */
