--- a/src/style.css
+++ b/src/style.css
@@ -56,15 +56,20 @@ h1 {
     background-color: #f9f9f9;
   }
 }
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    color: #f9f9f9;
-    background-color:#213547 ;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+
+.tool-icon{
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  background: transparent;
+  cursor: pointer;
+  color: white;
+  font-size: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tool-icon:hover{
+  background: #66b1ff;
+}
